--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,5 @@
 /* styles */
-
-/* size of margin, border and padding is included in size of element 
+/* size of margin, border and padding is included in size of element
    in internal CSS calculations */
 * {
   box-sizing: border-box;
@@ -156,6 +155,7 @@ h3 {
   display: flex;
   flex-flow: row wrap;
 }
+
 .color-box {
   width: 2em;
   height: 2em;
@@ -178,11 +178,80 @@ footer {
   display: none !important;
 }
 
+.popup {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: none;
+  z-index: 1;
+}
+
+.popup .center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1em;
+  width: 80%;
+  height: 40%;
+  min-width: 20em;
+  min-height: 8em;
+  border-radius: 10px;
+  background-color: #ffffff;
+}
+
+.popup h2 {
+  display: block;
+  text-align: center;
+  font-size: 1.6em;
+  font-weight: bold;
+}
+
+.popup p {
+  display: block;
+  text-align: center;
+  margin: 1.5em 0 0 0;
+  font-size: 1em;
+}
+
+.popup .close {
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  width: 1.4em;
+  height: 1.4em;
+  text-align: right;
+  font-size: 4em;
+  color: #ffffff;
+}
+
+.popup .close:before {
+  content: "X";
+}
+
+.popup_shade {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+  background-color: #000000;
+  z-index: 0;
+}
+
 @media screen and (max-width: 525px) {
   main {
     width: auto;
     margin: 1em;
   }
+
   .postcard {
     flex-flow: column;
     min-height: 60vh;
